--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -96,7 +96,7 @@
     \item verbindliche interne Vorschriften gemäß \hyperref[ch:47]{Artikel 47} genehmigen;%
     \label{itm:57-1s}
 
-    \item Beiträge zur Tätigkeit des Ausschusses leisten;%
+    \item Beiträge zur Tätigkeit des \hyperref[ch:68]{Ausschusses} leisten;%
     \label{itm:57-1t}
 
     \item interne Verzeichnisse über Verstöße gegen diese Verordnung und gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2}
