--- a/artikel/62.tex
+++ b/artikel/62.tex
@@ -61,7 +61,7 @@
    anderen \hyperref[itm:04-21]{Aufsichtsbehörden} eine einstweilige Maßnahme im Hoheitsgebiet ihres Mitgliedstaats
    gemäß \hyperref[ch:55]{Artikel 55} ergreifen. In diesem Fall wird von einem dringenden Handlungsbedarf
    gemäß \hyperref[itm:66-1]{Artikel 66 Absatz 1} ausgegangen, der eine im Dringlichkeitsverfahren angenommene
-   Stellungnahme oder einen im Dringlichkeitsverfahren angenommenen verbindlichen Beschluss des Ausschusses
+   Stellungnahme oder einen im Dringlichkeitsverfahren angenommenen verbindlichen Beschluss des \hyperref[ch:68]{Ausschusses}
    gemäß \hyperref[itm:66-2]{Artikel 66 Absatz 2} erforderlich macht.%
   \label{itm:62-7}
 
