--- a/artikel/64.tex
+++ b/artikel/64.tex
@@ -49,9 +49,9 @@
   \item In den in den Absätzen \hyperref[itm:64-1]{1} und \hyperref[itm:64-2]{2} genannten Fällen gibt der Ausschuss
    eine Stellungnahme zu der Angelegenheit ab, die ihm vorgelegt wurde, sofern er nicht bereits eine Stellungnahme zu
    derselben Angelegenheit abgegeben hat. Diese Stellungnahme wird binnen acht Wochen mit der einfachen Mehrheit der
-   Mitglieder des Ausschusses angenommen. Diese Frist kann unter Berücksichtigung der Komplexität der Angelegenheit um
+   Mitglieder des \hyperref[ch:68]{Ausschusses} angenommen. Diese Frist kann unter Berücksichtigung der Komplexität der Angelegenheit um
    weitere sechs Wochen verlängert werden. Was den in \hyperref[itm:64-1]{Absatz 1} genannten Beschlussentwurf angeht,
-   der gemäß \hyperref[itm:64-5]{Absatz 5} den Mitgliedern des Ausschusses übermittelt wird, so wird angenommen, dass
+   der gemäß \hyperref[itm:64-5]{Absatz 5} den Mitgliedern des \hyperref[ch:68]{Ausschusses} übermittelt wird, so wird angenommen, dass
    ein Mitglied, das innerhalb einer vom Vorsitz angegebenen angemessenen Frist keine Einwände erhoben hat, dem
    Beschlussentwurf zustimmt.%
   \label{itm:64-3}
@@ -63,13 +63,13 @@
    {betroffener Aufsichtsbehörden}.%
   \label{itm:64-4}
 
-  \item Der Vorsitz des Ausschusses unterrichtet unverzüglich auf elektronischem Wege%
+  \item Der Vorsitz des \hyperref[ch:68]{Ausschusses} unterrichtet unverzüglich auf elektronischem Wege%
   \label{itm:64-5}
 
   \begin{enumerate}
   
-    \item unter Verwendung eines standardisierten Formats die Mitglieder des Ausschusses und die Kommission über alle
-     zweckdienlichen Informationen, die ihm zugegangen sind. Soweit erforderlich stellt das Sekretariat des Ausschusses
+    \item unter Verwendung eines standardisierten Formats die Mitglieder des \hyperref[ch:68]{Ausschusses} und die Kommission über alle
+     zweckdienlichen Informationen, die ihm zugegangen sind. Soweit erforderlich stellt das Sekretariat des \hyperref[ch:68]{Ausschusses}
      Übersetzungen der zweckdienlichen Informationen zur Verfügung und%
     \label{itm:64-5a}
 
@@ -85,14 +85,14 @@
   \label{itm:64-6}
 
   \item Die in \hyperref[itm:64-1]{Absatz 1} genannte \hyperref[itm:04-21]{Aufsichtsbehörde} trägt der Stellungnahme des
-   Ausschusses weitestgehend Rechnung und teilt dessen Vorsitz binnen zwei Wochen nach Eingang der Stellungnahme auf
+   \hyperref[ch:68]{Ausschusses} weitestgehend Rechnung und teilt dessen Vorsitz binnen zwei Wochen nach Eingang der Stellungnahme auf
    elektronischem Wege unter Verwendung eines standardisierten Formats mit, ob sie den Beschlussentwurf beibehalten
    oder ändern wird; gegebenenfalls übermittelt sie den geänderten Beschlussentwurf.%
   \label{itm:64-7}
 
-  \item Teilt in \hyperref[itm:64-1]{Absatz 1} genannte die zuständige Aufsichtsbehörde dem Vorsitz des Ausschusses
+  \item Teilt in \hyperref[itm:64-1]{Absatz 1} genannte die zuständige Aufsichtsbehörde dem Vorsitz des \hyperref[ch:68]{Ausschusses}
    innerhalb der Frist nach \hyperref[itm:64-7]{Absatz 7} des vorliegenden Artikels unter Angabe der maßgeblichen
-   Gründe mit, dass sie beabsichtigt, der Stellungnahme des Ausschusses insgesamt oder teilweise nicht zu folgen, so
+   Gründe mit, dass sie beabsichtigt, der Stellungnahme des \hyperref[ch:68]{Ausschusses} insgesamt oder teilweise nicht zu folgen, so
    gilt \hyperref[itm:65-2]{Artikel 65 Absatz 1}.%
   \label{itm:64-8}
 
