--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -25,7 +25,7 @@
     \label{itm:65-1b}
 
     \item wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} in den in \hyperref[itm:64-1]{Artikel 64 Absatz 1}
-     genannten Fällen keine Stellungnahme des Ausschusses einholt oder der Stellungnahme des Ausschusses
+     genannten Fällen keine Stellungnahme des \hyperref[ch:68]{Ausschusses} einholt oder der Stellungnahme des \hyperref[ch:68]{Ausschusses}
      gemäß \hyperref[ch:64]{Artikel 64} nicht folgt. In diesem Fall kann jede \hyperref[itm:04-22]
      {betroffene Aufsichtsbehörde} oder die Kommission die Angelegenheit dem Ausschuss vorlegen.%
     \label{itm:65-1c}
@@ -33,7 +33,7 @@
   \end{enumerate}
 
   \item Der in \hyperref[itm:65-1]{Absatz 1} genannte Beschluss wird innerhalb eines Monats nach der Befassung mit der
-   Angelegenheit mit einer Mehrheit von zwei Dritteln der Mitglieder des Ausschusses angenommen. Diese Frist kann wegen
+   Angelegenheit mit einer Mehrheit von zwei Dritteln der Mitglieder des \hyperref[ch:68]{Ausschusses} angenommen. Diese Frist kann wegen
    der Komplexität der Angelegenheit um einen weiteren Monat verlängert werden. Der in \hyperref[itm:65-1]{Absatz 1}
    genannte Beschluss wird begründet und an die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und alle \hyperref
    [itm:04-22]{betroffenen Aufsichtsbehörden} übermittelt und ist für diese verbindlich.%
@@ -41,8 +41,8 @@
 
   \item War der Ausschuss nicht in der Lage, innerhalb der in \hyperref[itm:65-2]{Absatz 2} genannten Fristen einen
    Beschluss anzunehmen, so nimmt er seinen Beschluss innerhalb von zwei Wochen nach Ablauf des in \hyperref[itm:65-2]
-   {Absatz 2} genannten zweiten Monats mit einfacher Mehrheit der Mitglieder des Ausschusses an. Bei Stimmengleichheit
-   zwischen den Mitgliedern des Ausschusses gibt die Stimme des Vorsitzes den Ausschlag.%
+   {Absatz 2} genannten zweiten Monats mit einfacher Mehrheit der Mitglieder des \hyperref[ch:68]{Ausschusses} an. Bei Stimmengleichheit
+   zwischen den Mitgliedern des \hyperref[ch:68]{Ausschusses} gibt die Stimme des Vorsitzes den Ausschlag.%
   \label{itm:65-3}
 
   \item Die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} nehmen vor Ablauf der in den Absätzen \hyperref
@@ -50,9 +50,9 @@
    Angelegenheit an.%
   \label{itm:65-4}
 
-  \item Der Vorsitz des Ausschusses unterrichtet die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich
+  \item Der Vorsitz des \hyperref[ch:68]{Ausschusses} unterrichtet die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich
    über den in \hyperref[itm:65-1]{Absatz 1} genannten Beschluss. Er setzt die Kommission hiervon in Kenntnis. Der
-   Beschluss wird unverzüglich auf der Website des Ausschusses veröffentlicht, nachdem die \hyperref[itm:04-21]
+   Beschluss wird unverzüglich auf der Website des \hyperref[ch:68]{Ausschusses} veröffentlicht, nachdem die \hyperref[itm:04-21]
    {Aufsichtsbehörde} den in \hyperref[itm:65-6]{Absatz 6} genannten endgültigen Beschluss mitgeteilt hat.%
   \label{itm:65-5}
 
@@ -67,7 +67,7 @@
     {betroffenen Aufsichtsbehörden} wird gemäß \hyperref[ch:60]{Artikel 60} Absätze \hyperref[itm:60-7]{7}, \hyperref
     [itm:60-8]{8} und \hyperref[itm:60-9]{9} angenommen. Im endgültigen Beschluss wird auf den in \hyperref[itm:65-1]
     {Absatz 1} genannten Beschluss verwiesen und festgelegt, dass der in \hyperref[itm:65-1]{Absatz 1 des vorliegenden
-    Artikels} genannte Beschluss gemäß \hyperref[itm:65-5]{Absatz 5} auf der Website des Ausschusses veröffentlicht
+    Artikels} genannte Beschluss gemäß \hyperref[itm:65-5]{Absatz 5} auf der Website des \hyperref[ch:68]{Ausschusses} veröffentlicht
     wird. Dem endgültigen Beschluss wird der in \hyperref[itm:65-1]{Absatz 1 des vorliegenden Artikels} genannte
     Beschluss beigefügt.%
   \label{itm:65-6}
