--- a/artikel/68.tex
+++ b/artikel/68.tex
@@ -22,9 +22,9 @@
    Rechtsvorschriften dieses Mitgliedstaats ein gemeinsamer \hyperref[itm:04-17]{Vertreter} benannt.%
   \label{itm:68-4}
 
-  \item Die Kommission ist berechtigt, ohne Stimmrecht an den Tätigkeiten und Sitzungen des Ausschusses teilzunehmen.
-   Die Kommission benennt einen \hyperref[itm:04-17]{Vertreter}. Der Vorsitz des Ausschusses unterrichtet die
-   Kommission über die Tätigkeiten des Ausschusses.%
+  \item Die Kommission ist berechtigt, ohne Stimmrecht an den Tätigkeiten und Sitzungen des \hyperref[ch:68]{Ausschusses} teilzunehmen.
+   Die Kommission benennt einen \hyperref[itm:04-17]{Vertreter}. Der Vorsitz des \hyperref[ch:68]{Ausschusses} unterrichtet die
+   Kommission über die Tätigkeiten des \hyperref[ch:68]{Ausschusses}.%
   \label{itm:68-5}
 
   \item In den in \hyperref[ch:65]{Artikel 65} genannten Fällen ist der Europäische Datenschutzbeauftragte nur bei
