--- a/artikel/78.tex
+++ b/artikel/78.tex
@@ -25,7 +25,7 @@
   \label{itm:78-3}
 
   \item Kommt es zu einem Verfahren gegen den Beschluss einer \hyperref[itm:04-21]{Aufsichtsbehörde}, dem eine
-   Stellungnahme oder ein Beschluss des Ausschusses im Rahmen des Kohärenzverfahrens vorangegangen ist, so leitet
+   Stellungnahme oder ein Beschluss des \hyperref[ch:68]{Ausschusses} im Rahmen des Kohärenzverfahrens vorangegangen ist, so leitet
    die \hyperref[itm:04-21]{Aufsichtsbehörde} diese Stellungnahme oder diesen Beschluss dem Gericht zu.%
   \label{itm:78-4}
 
