--- a/DSGVO-ExtendedVersion.bib
+++ b/DSGVO-ExtendedVersion.bib
@@ -167,3 +167,26 @@
   url          = {https://edpb.europa.eu/our-work-tools/accountability-tools/bcr_de}
 }
 
+@misc { edpb-jb,
+  shorthand    = {EDSA-JB},
+  title        = {Jahresbericht},
+  author       = {Europäische Datenschutzausschuss (EDSA)},
+  url          = {https://edpb.europa.eu/about-edpb/about-edpb/annual-reports_de}
+}
+
+@misc { edpb-rop-mou,
+  shorthand    = {EDSA-GO},
+  title        = {Geschäftsordnung („EDPB Rules of Procedure“) und „Memorandum of Understanding“},
+  author       = {Europäische Datenschutzausschuss (EDSA)},
+  url          = {https://edpb.europa.eu/about-edpb/about-edpb/rules-procedure-and-memorandum-understanding_de}
+}
+
+@misc { bericht-art97-2020,
+  shorthand    = {MDS-2020},
+  title        = {MITTEILUNG DER KOMMISSION AN DAS EUROPÄISCHE PARLAMENT UND DEN RAT},
+  subtitle     = {Datenschutz als Grundpfeiler der Teilhabe der Bürgerinnen und Bürger und des Ansatzes der EU für den
+  digitalen Wandel – zwei Jahre Anwendung der Datenschutz-Grundverordnung},
+  author       = {Europäische Kommission},
+  url          = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A52020DC0264}
+}
+
