--- a/artikel/72.tex
+++ b/artikel/72.tex
@@ -10,8 +10,8 @@
    Mehrheit seiner Mitglieder.%
   \label{itm:72-1}
 
-  \item Der Ausschuss gibt sich mit einer Mehrheit von zwei Dritteln seiner Mitglieder eine Geschäftsordnung und legt
-   seine Arbeitsweise fest.%
+  \item Der Ausschuss gibt sich mit einer Mehrheit von zwei Dritteln seiner Mitglieder eine Geschäftsordnung
+   \comment{verfügbar unter \cite{edpb-rop-mou}} und legt seine Arbeitsweise fest.%
   \label{itm:72-2}
 
 \end{enumerate}
