--- a/artikel/97.tex
+++ b/artikel/97.tex
@@ -7,7 +7,8 @@
 \begin{enumerate}
 
   \item Bis zum 25. Mai 2020 und danach alle vier Jahre legt die Kommission dem Europäischen Parlament und dem Rat einen
-   Bericht über die Bewertung und Überprüfung dieser Verordnung vor. Die Berichte werden öffentlich gemacht.%
+   Bericht über die Bewertung und Überprüfung dieser Verordnung vor. Die Berichte werden öffentlich gemacht.
+   \comment{Der erste dieser Berichte ist unter \cite{bericht-art97-2020} verfügbar.}%
   \label{itm:97-1}
 
   \item Im Rahmen der Bewertungen und Überprüfungen nach \hyperref[itm:97-1]{Absatz 1} prüft die Kommission insbesondere
