externe Referenzen aus Erwägunsgründen fixes #1

--- a/DSGVO-ExtendedVersion.bib
+++ b/DSGVO-ExtendedVersion.bib
@@ -47,6 +47,69 @@
   url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX:32001R0045}
 }
 
+@misc { vo-akkred-2008,
+  shorthand    = {V-EG 765/2008},
+  title        = {Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments und des Rates vom 9. Juli 2008 über die Vorschriften für die Akkreditierung und Marktüberwachung im Zusammenhang mit der Vermarktung von Produkten und zur Aufhebung der Verordnung (EWG) Nr. 339/93 des Rates},
+  date         = {2008-07-09},
+  howpublished = {ABl. L 218 vom 13.8.2008, S. 30–47},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32008R0765}
+}
+
+@misc { vo-mu-kp-2019,
+  shorthand    = {V-EU 2019/1020},
+  title        = {Verordnung (EU) 2019/1020 des Europäischen Parlaments und des Rates vom 20. Juni 2019 über Marktüberwachung und die Konformität von Produkten sowie zur Änderung der Richtlinie 2004/42/EG und der Verordnungen (EG) Nr. 765/2008 und (EU) Nr. 305/2011},
+  date         = {2019-06-20},
+  howpublished = {ABl. L 169 vom 25.6.2019},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=celex%3A32019R1020}
+}
+
+@misc { vo-akkred-kons,
+  shorthand    = {V-EG 765/2008 (kF)},
+  title        = {Konsolidierter Text: Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments und des Rats vom 9. Juli 2008 über die Vorschriften für die Akkreditierung und zur Aufhebung der Verordnung (EWG) Nr. 339/93},
+  date         = {2021-07-16},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02008R0765-20210716}
+}
+
+@misc { vo-dok-zugang,
+  shorthand    = {V-EG 1049/2001},
+  title        = {Verordnung (EG) Nr. 1049/2001 des Europäischen Parlaments und des Rates vom 30. Mai 2001 über den Zugang der Öffentlichkeit zu Dokumenten des Europäischen Parlaments, des Rates und der Kommission},
+  date         = {2001-05-30},
+  howpublished = {ABl. L 145 vom 31.5.2001, S. 43–48},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32001R1049}
+}
+
+@misc { vo-kontr-komm,
+  shorthand    = {V-EU 182/2011},
+  title        = {Verordnung (EU) Nr. 182/2011 des Europäischen Parlaments und des Rates vom 16. Februar 2011 zur Festlegung der allgemeinen Regeln und Grundsätze, nach denen die Mitgliedstaaten die Wahrnehmung der Durchführungsbefugnisse durch die Kommission kontrollieren},
+  date         = {2011-02-16},
+  howpublished = {ABl. L 55 vom 28.2.2011, S. 13–18},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32011R0182}
+}
+
+@misc { vo-stat-ges,
+  shorthand    = {V-EG 1338/2008 (kF)},
+  title        = {Konsolidierter Text: Verordnung (EG) Nr. 1338/2008 des Europäischen Parlaments und des Rates vom 16. Dezember 2008 zu Gemeinschaftsstatistiken über öffentliche Gesundheit und über Gesundheitsschutz und Sicherheit am Arbeitsplatz (Text von Bedeutung für den EWR)Text von Bedeutung für den EWR},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02008R1338-20210101}
+}
+
+@misc { vo-gz,
+  shorthand    = {V-EU 1215/2012 (kF)},
+  title        = {Konsolidierter Text: Verordnung (EU) Nr. 1215/2012 des Europäischen Parlaments und des Rates vom 12. Dezember 2012 über die gerichtliche Zuständigkeit und die Anerkennung und Vollstreckung von Entscheidungen in Zivil- und Handelssachen (Neufassung)},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02012R1215-20150226}
+}
+
+@misc { vo-klin-pr-ham,
+  shorthand    = {V-EU 536/2014 (kF)},
+  title        = {Konsolidierter Text: Verordnung (EU) Nr. 536/2014 des Europäischen Parlaments und des Rates vom 16. April 2014 über klinische Prüfungen mit Humanarzneimitteln und zur Aufhebung der Richtlinie 2001/20/EG},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02014R0536-20220131}
+}
+
+@misc { vo-eustat-euratom,
+  shorthand    = {V-EG 223/2009 (kF)},
+  title        = {Konsolidierter Text: Verordnung (EG) Nr. 223/2009 des Europäischen Parlaments und des Rates vom 11. März 2009 über europäische Statistiken und zur Aufhebung der Verordnung (EG, Euratom) Nr. 1101/2008 des Europäischen Parlaments und des Rates über die Übermittlung von unter die Geheimhaltungspflicht fallenden Informationen an das Statistische Amt der Europäischen Gemeinschaften, der Verordnung (EG) Nr. 322/97 des Rates über die Gemeinschaftsstatistiken und des Beschlusses 89/382/EWG, Euratom des Rates zur Einsetzung eines Ausschusses für das Statistische Programm der Europäischen Gemeinschaften},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02009R0223-20150608}
+}
+
 @misc { ril-egv,
   shorthand    = {Ril 2000/31/EG},
   title        = {Richtlinie 2000/31/EG des Europäischen Parlaments und des Rates vom 8. Juni 2000 über bestimmte rechtliche Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen Geschäftsverkehrs, im Binnenmarkt ("Richtlinie über den elektronischen Geschäftsverkehr")},
@@ -71,27 +134,34 @@
   url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX:32002L0058}
 }
 
-@misc { vo-akkred-2008,
-  shorthand    = {V-EG 765/2008},
-  title        = {Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments und des Rates vom 9. Juli 2008 über die Vorschriften für die Akkreditierung und Marktüberwachung im Zusammenhang mit der Vermarktung von Produkten und zur Aufhebung der Verordnung (EWG) Nr. 339/93 des Rates},
-  date         = {2008-07-09},
-  howpublished = {ABl. L 218 vom 13.8.2008, S. 30–47},
-  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32008R0765}
+@misc { ril-ds-strafverfolgung,
+  shorthand    = {Ril (EU) 2016/680 (kF)},
+  title        = {Konsolidierter Text: Richtlinie (EU) 2016/680 des Europäischen Parlaments und des Rates vom 27. April 2016 zum Schutz natürlicher Personen bei der Verarbeitung personenbezogener Daten durch die zuständigen Behörden zum Zwecke der Verhütung, Ermittlung, Aufdeckung oder Verfolgung von Straftaten oder der Strafvollstreckung sowie zum freien Datenverkehr und zur Aufhebung des Rahmenbeschlusses 2008/977/JI des Rates},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02016L0680-20160504}
 }
 
-@misc { vo-mu-kp-2019,
-  shorthand    = {V-EU 2019/1020},
-  title        = {Verordnung (EU) 2019/1020 des Europäischen Parlaments und des Rates vom 20. Juni 2019 über Marktüberwachung und die Konformität von Produkten sowie zur Änderung der Richtlinie 2004/42/EG und der Verordnungen (EG) Nr. 765/2008 und (EU) Nr. 305/2011},
-  date         = {2019-06-20},
-  howpublished = {ABl. L 169 vom 25.6.2019},
-  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=celex%3A32019R1020}
+@misc { ril-patrechte,
+  shorthand    = {Ril 2011/24/EU (kF)},
+  title        = {Konsolidierter Text: Richtlinie 2011/24/EU des Europäischen Parlaments und des Rates vom 9. März 2011 über die Ausübung der Patientenrechte in der grenzüberschreitenden Gesundheitsversorgung},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02011L0024-20140101}
 }
 
-@misc { vo-akkred-kons,
-  shorthand    = {V-EG 765/2008 (kF)},
-  title        = {Konsolidierter Text: Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments und des Rats vom 9. Juli 2008 über die Vorschriften für die Akkreditierung und zur Aufhebung der Verordnung (EWG) Nr. 339/93},
-  date         = {2021-07-16},
-  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02008R0765-20210716}
+@misc { ril-patrechte,
+  shorthand    = {Ril 2011/24/EU (kF)},
+  title        = {Konsolidierter Text: Richtlinie 2011/24/EU des Europäischen Parlaments und des Rates vom 9. März 2011 über die Ausübung der Patientenrechte in der grenzüberschreitenden Gesundheitsversorgung},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02011L0024-20140101}
+}
+
+@misc { ril-mk-vv,
+  shorthand    = {Ril 93/13/EWG (kF)},
+  title        = {Konsolidierter Text: Richtlinie 93/13/EWG des Rates vom 5. April 1993 über mißbräuchliche Klauseln in Verbraucherverträgen},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A01993L0013-20220528}
+}
+
+@misc { ril-wvi-os,
+  shorthand    = {Ril 2003/98/EG (kF)},
+  title        = {Konsolidierter Text: Richtlinie 2003/98/EG des Europäischen Parlaments und des Rates vom 17. November 2003 über die Weiterverwendung von Informationen des öffentlichen Sektors},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A02003L0098-20130717}
 }
 
 @misc { ril-ds-alt,
@@ -107,22 +177,6 @@
   title        = {Adequacy Decisions},
   subtitle     = {How the EU determines if a non-EU country has an adequate level of data protection.},
   url          = {https://ec.europa.eu/info/law/law-topic/data-protection/international-dimension-data-protection/adequacy-decisions_en}
-}
-
-@misc { vo-dok-zugang,
-  shorthand    = {V-EG 1049/2001},
-  title        = {Verordnung (EG) Nr. 1049/2001 des Europäischen Parlaments und des Rates vom 30. Mai 2001 über den Zugang der Öffentlichkeit zu Dokumenten des Europäischen Parlaments, des Rates und der Kommission},
-  date         = {2001-05-30},
-  howpublished = {ABl. L 145 vom 31.5.2001, S. 43–48},
-  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32001R1049}
-}
-
-@misc { vo-kontr-komm,
-  shorthand    = {V-EU 182/2011},
-  title        = {Verordnung (EU) Nr. 182/2011 des Europäischen Parlaments und des Rates vom 16. Februar 2011 zur Festlegung der allgemeinen Regeln und Grundsätze, nach denen die Mitgliedstaaten die Wahrnehmung der Durchführungsbefugnisse durch die Kommission kontrollieren},
-  date         = {2011-02-16},
-  howpublished = {ABl. L 55 vom 28.2.2011, S. 13–18},
-  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32011R0182}
 }
 
 @misc { bfdi-dsfa-listen,
@@ -190,3 +244,19 @@
   url          = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A52020DC0264}
 }
 
+@misc { ek-kmu,
+  shorthand    = {Empf K(2003) 1422},
+  title        = {Empfehlung der Kommission vom 6. Mai 2003 betreffend die Definition der Kleinstunternehmen sowie der kleinen und mittleren Unternehmen},
+  subtitle     = {Bekannt gegeben unter Aktenzeichen K(2003) 1422},
+  date         = {2003-05-03},
+  howpublished = {ABl. L 124 vom 20.5.2003, S. 36–41},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32003H0361}
+}
+
+@misc { sn-dsref,
+  shorthand    = {EDSB-DSREF},
+  title        = {Zusammenfassung der Stellungnahme des EDSB vom 7. März 2012 zum Datenschutzreformpaket},
+  date         = {2012-03-07},
+  howpublished = {ABl. C 192 vom 30.6.2012, S. 7–15},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=uriserv%3AOJ.C_.2012.192.01.0007.01.DEU&toc=OJ%3AC%3A2012%3A192%3ATOC}
+}
