--- a/umfeld/eg.tex
+++ b/umfeld/eg.tex
@@ -20,11 +20,12 @@
    
    \crossrefReasonToArticle{2}
 
-   \item Zweck der Richtlinie 95/46/EG des Europäischen Parlaments und des Rates\comment{Richtlinie 95/46/EG des
+   \item Zweck der Richtlinie 95/46/EG des Europäischen Parlaments und des Rates\comment{Richtlinie 95/46/EG siehe des
     Europäischen Parlaments und des Rates vom 24. Oktober 1995 zum Schutz natürlicher Personen bei der Verarbeitung
-    personenbezogener Daten und zum freien Datenverkehr (ABl. L 281 vom 23.11.1995, S. 31).} ist die Harmonisierung der
-    Vorschriften zum Schutz der Grundrechte und Grundfreiheiten natürlicher Personen bei der Datenverarbeitung sowie
-    die Gewährleistung des freien Verkehrs personenbezogener Daten zwischen den Mitgliedstaaten.%
+    personenbezogener Daten und zum freien Datenverkehr, konsolidierte Fassung siehe \cite{ril-ds-alt}} ist die
+    Harmonisierung der Vorschriften zum Schutz der Grundrechte und Grundfreiheiten natürlicher Personen bei der
+    Datenverarbeitung sowie die Gewährleistung des freien Verkehrs personenbezogener Daten zwischen den
+    Mitgliedstaaten.%
    \label{itm:eg-3}
    
    \crossrefReasonToArticle{3}
@@ -148,8 +149,8 @@
     Bedürfnisse von Kleinstunternehmen sowie von kleinen und mittleren Unternehmen zu berücksichtigen. Für die
     Definition des Begriffs „Kleinstunternehmen sowie kleine und mittlere Unternehmen“ sollte Artikel 2 des Anhangs zur
     Empfehlung 2003/361/EG der Kommission\comment{Empfehlung der Kommission vom 6. Mai 2003 betreffend die Definition
-    der Kleinstunternehmen sowie der kleinen und mittleren Unternehmen (C (2003) 1422) (ABl. L 124 vom 20.5.2003, S.
-    36).} maßgebend sein.%
+    der Kleinstunternehmen sowie der kleinen und mittleren Unternehmen (C (2003) 1422) siehe \cite{ek-kmu}} maßgebend
+    sein.%
    \label{itm:eg-13}
    
    \crossrefReasonToArticle{13}
@@ -184,7 +185,7 @@
    \item Die Verordnung (EG) Nr. 45/2001 des Europäischen Parlaments und des Rates\comment{Verordnung (EG) Nr. 45/2001
     des Europäischen Parlaments und des Rates vom 18. Dezember 2000 zum Schutz natürlicher Personen bei der
     Verarbeitung personenbezogener Daten durch die Organe und Einrichtungen der Gemeinschaft und zum freien
-    Datenverkehr (ABl. L 8 vom 12.1.2001, S. 1).} gilt für die Verarbeitung personenbezogener Daten durch die Organe,
+    Datenverkehr siehe \cite{vo-ds-fdv}} gilt für die Verarbeitung personenbezogener Daten durch die Organe,
     Einrichtungen, Ämter und Agenturen der Union. Die Verordnung (EG) Nr. 45/2001 und sonstige Rechtsakte der Union,
     die diese Verarbeitung personenbezogener Daten regeln, sollten an die Grundsätze und Vorschriften der vorliegenden
     Verordnung angepasst und im Lichte der vorliegenden Verordnung angewandt werden. Um einen soliden und kohärenten
@@ -216,29 +217,25 @@
     Rates\comment{Richtlinie (EU) 2016/680 des Europäischen Parlaments und des Rates vom 27. April 2016 zum Schutz
     natürlicher Personen bei der Verarbeitung personenbezogener Daten durch die zuständigen Behörden zum Zwecke der
     Verhütung, Aufdeckung, Untersuchung oder Verfolgung von Straftaten oder der Strafvollstreckung sowie zum freien
-    Datenverkehr und zur Aufhebung des Rahmenbeschlusses 2000/383/JI des Rates (siehe Seite 89 dieses
-    Amtsblatts).Richtlinie (EU) 2016/680 des Europäischen Parlaments und des Rates vom 27. April 2016 zum Schutz
-    natürlicher Personen bei der Verarbeitung personenbezogener Daten durch die zuständigen Behörden zum Zwecke der
-    Verhütung, Aufdeckung, Untersuchung oder Verfolgung von Straftaten oder der Strafvollstreckung sowie zum freien
-    Datenverkehr und zur Aufhebung des Rahmenbeschlusses 2000/383/JI des Rates (siehe Seite 89 dieses Amtsblatts).}
-    unterliegen. Die Mitgliedstaaten können die zuständigen Behörden im Sinne der Richtlinie (EU) 2016/680 mit Aufgaben
-    betrauen, die nicht zwangsläufig für die Zwecke der Verhütung, Ermittlung, Aufdeckung oder Verfolgung von
-    Straftaten oder der Strafvollstreckung, einschließlich des Schutzes vor und der Abwehr von Gefahren für die
-    öffentliche Sicherheit, ausgeführt werden, so dass die Verarbeitung von personenbezogenen Daten für diese anderen
-    Zwecke insoweit in den Anwendungsbereich dieser Verordnung fällt, als sie in den Anwendungsbereich des Unionsrechts
-    fällt. In Bezug auf die Verarbeitung personenbezogener Daten durch diese Behörden für Zwecke, die in den
-    Anwendungsbereich dieser Verordnung fallen, sollten die Mitgliedstaaten spezifischere Bestimmungen beibehalten oder
-    einführen können, um die Anwendung der Vorschriften dieser Verordnung anzupassen. In den betreffenden Bestimmungen
-    können die Auflagen für die Verarbeitung personenbezogener Daten durch diese zuständigen Behörden für jene anderen
-    Zwecke präziser festgelegt werden, wobei der verfassungsmäßigen, organisatorischen und administrativen Struktur des
-    betreffenden Mitgliedstaats Rechnung zu tragen ist. Soweit diese Verordnung für die Verarbeitung personenbezogener
-    Daten durch private Stellen gilt, sollte sie vorsehen, dass die Mitgliedstaaten einige Pflichten und Rechte unter
-    bestimmten Voraussetzungen mittels Rechtsvorschriften beschränken können, wenn diese Beschränkung in einer
-    demokratischen Gesellschaft eine notwendige und verhältnismäßige Maßnahme zum Schutz bestimmter wichtiger
-    Interessen darstellt, wozu auch die öffentliche Sicherheit und die Verhütung, Ermittlung, Aufdeckung und Verfolgung
-    von Straftaten oder die Strafvollstreckung zählen, einschließlich des Schutzes vor und der Abwehr von Gefahren für
-    die öffentliche Sicherheit. Dies ist beispielsweise im Rahmen der Bekämpfung der Geldwäsche oder der Arbeit
-    kriminaltechnischer Labors von Bedeutung.%
+    Datenverkehr und zur Aufhebung des Rahmenbeschlusses 2000/383/JI des Rates, konsolidierte Fassung siehe 
+    \cite{ril-ds-strafverfolgung}} unterliegen. Die Mitgliedstaaten können die zuständigen Behörden im Sinne der
+     Richtlinie (EU) 2016/680 mit Aufgaben betrauen, die nicht zwangsläufig für die Zwecke der Verhütung, Ermittlung,
+     Aufdeckung oder Verfolgung von Straftaten oder der Strafvollstreckung, einschließlich des Schutzes vor und der
+     Abwehr von Gefahren für die öffentliche Sicherheit, ausgeführt werden, so dass die Verarbeitung von
+     personenbezogenen Daten für diese anderen Zwecke insoweit in den Anwendungsbereich dieser Verordnung fällt, als
+     sie in den Anwendungsbereich des Unionsrechts fällt. In Bezug auf die Verarbeitung personenbezogener Daten durch
+     diese Behörden für Zwecke, die in den Anwendungsbereich dieser Verordnung fallen, sollten die Mitgliedstaaten
+     spezifischere Bestimmungen beibehalten oder einführen können, um die Anwendung der Vorschriften dieser Verordnung
+     anzupassen. In den betreffenden Bestimmungen können die Auflagen für die Verarbeitung personenbezogener Daten
+     durch diese zuständigen Behörden für jene anderen Zwecke präziser festgelegt werden, wobei der verfassungsmäßigen,
+     organisatorischen und administrativen Struktur des betreffenden Mitgliedstaats Rechnung zu tragen ist. Soweit
+     diese Verordnung für die Verarbeitung personenbezogener Daten durch private Stellen gilt, sollte sie vorsehen,
+     dass die Mitgliedstaaten einige Pflichten und Rechte unter bestimmten Voraussetzungen mittels Rechtsvorschriften
+     beschränken können, wenn diese Beschränkung in einer demokratischen Gesellschaft eine notwendige und
+     verhältnismäßige Maßnahme zum Schutz bestimmter wichtiger Interessen darstellt, wozu auch die öffentliche
+     Sicherheit und die Verhütung, Ermittlung, Aufdeckung und Verfolgung von Straftaten oder die Strafvollstreckung
+     zählen, einschließlich des Schutzes vor und der Abwehr von Gefahren für die öffentliche Sicherheit. Dies ist
+     beispielsweise im Rahmen der Bekämpfung der Geldwäsche oder der Arbeit kriminaltechnischer Labors von Bedeutung.%
    \label{itm:eg-19}
    
    \crossrefReasonToArticle{19}
@@ -260,11 +257,11 @@
    \item Die vorliegende Verordnung berührt nicht die Anwendung der Richtlinie 2000/31/EG des Europäischen Parlaments
     und des Rates\comment{Richtlinie 2000/31/EG des Europäischen Parlaments und des Rates vom 8. Juni 2000 über
     bestimmte rechtliche Aspekte der Dienste der Informationsgesellschaft, insbesondere des elektronischen
-    Geschäftsverkehrs, im Binnenmarkt („Richtlinie über den elektronischen Geschäftsverkehr“) (ABl. L 178 vom
-    17.7.2000, S. 1).} und insbesondere die der Vorschriften der Artikel 12 bis 15 jener Richtlinie zur
-    Verantwortlichkeit von Anbietern reiner Vermittlungsdienste. Die genannte Richtlinie soll dazu beitragen, dass der
-    Binnenmarkt einwandfrei funktioniert, indem sie den freien Verkehr von Diensten der Informationsgesellschaft
-    zwischen den Mitgliedstaaten sicherstellt.%
+    Geschäftsverkehrs, im Binnenmarkt („Richtlinie über den elektronischen Geschäftsverkehr“) siehe \cite{ril-egv}} und
+    insbesondere die der Vorschriften der Artikel 12 bis 15 jener Richtlinie zur Verantwortlichkeit von Anbietern
+    reiner Vermittlungsdienste. Die genannte Richtlinie soll dazu beitragen, dass der Binnenmarkt einwandfrei
+    funktioniert, indem sie den freien Verkehr von Diensten der Informationsgesellschaft zwischen den Mitgliedstaaten
+    sicherstellt.%
    \label{itm:eg-21}
    
    \crossrefReasonToArticle{21}
@@ -427,14 +424,14 @@
     natürliche Person, die im Zuge der Anmeldung für sowie der Erbringung von Gesundheitsdienstleistungen im Sinne der
     Richtlinie 2011/24/EU des Europäischen Parlaments und des Rates\comment {Richtlinie 2011/24/EU des Europäischen
     Parlaments und des Rates vom 9. März 2011 über die Ausübung der Patientenrechte in der grenzüberschreitenden
-    Gesundheitsversorgung (ABl. L 88 vom 4.4.2011, S. 45).} für die natürliche Person erhoben werden, Nummern, Symbole
-    oder Kennzeichen, die einer natürlichen Person zugeteilt wurden, um diese natürliche Person für gesundheitliche
-    Zwecke eindeutig zu identifizieren, Informationen, die von der Prüfung oder Untersuchung eines Körperteils oder
-    einer körpereigenen Substanz, auch aus genetischen Daten und biologischen Proben, abgeleitet wurden, und
-    Informationen etwa über Krankheiten, Behinderungen, Krankheitsrisiken, Vorerkrankungen, klinische Behandlungen oder
-    den physiologischen oder biomedizinischen Zustand der betroffenen Person unabhängig von der Herkunft der Daten, ob
-    sie nun von einem Arzt oder sonstigem Angehörigen eines Gesundheitsberufes, einem Krankenhaus, einem Medizinprodukt
-    oder einem In"=Vitro"=Diagnostikum stammen.%
+    Gesundheitsversorgung, konsolidierte Fassung siehe \cite{ril-patrechte}} für die natürliche Person erhoben werden,
+    Nummern, Symbole oder Kennzeichen, die einer natürlichen Person zugeteilt wurden, um diese natürliche Person für
+    gesundheitliche Zwecke eindeutig zu identifizieren, Informationen, die von der Prüfung oder Untersuchung eines
+    Körperteils oder einer körpereigenen Substanz, auch aus genetischen Daten und biologischen Proben, abgeleitet
+    wurden, und Informationen etwa über Krankheiten, Behinderungen, Krankheitsrisiken, Vorerkrankungen, klinische
+    Behandlungen oder den physiologischen oder biomedizinischen Zustand der betroffenen Person unabhängig von der
+    Herkunft der Daten, ob sie nun von einem Arzt oder sonstigem Angehörigen eines Gesundheitsberufes, einem
+    Krankenhaus, einem Medizinprodukt oder einem In"=Vitro"=Diagnostikum stammen.%
    \label{itm:eg-35}
    
    \crossrefReasonToArticle{35}
@@ -539,14 +536,14 @@
     dass die betroffene Person ihre Einwilligung zu dem Verarbeitungsvorgang gegeben hat. Insbesondere bei Abgabe einer
     schriftlichen Erklärung in anderer Sache sollten Garantien sicherstellen, dass die betroffene Person weiß, dass und
     in welchem Umfang sie ihre Einwilligung erteilt. Gemäß der Richtlinie 93/13/EWG des Rates\comment
-    {Richtlinie 93/13/EWG des Rates vom 5. April 1993 über missbräuchliche Klauseln in Verbraucherverträgen (ABl. L 95
-    vom 21.4.1993, S. 29).} sollte eine vom Verantwortlichen vorformulierte Einwilligungserklärung in verständlicher
-    und leicht zugänglicher Form in einer klaren und einfachen Sprache zur Verfügung gestellt werden, und sie sollte
-    keine missbräuchlichen Klauseln beinhalten. Damit sie in Kenntnis der Sachlage ihre Einwilligung geben kann, sollte
-    die betroffene Person mindestens wissen, wer der Verantwortliche ist und für welche Zwecke ihre personenbezogenen
-    Daten verarbeitet werden sollen. Es sollte nur dann davon ausgegangen werden, dass sie ihre Einwilligung freiwillig
-    gegeben hat, wenn sie eine echte oder freie Wahl hat und somit in der Lage ist, die Einwilligung zu verweigern oder
-    zurückzuziehen, ohne Nachteile zu erleiden.%
+    {Richtlinie 93/13/EWG des Rates vom 5. April 1993 über missbräuchliche Klauseln in Verbraucherverträgen,
+    konsolidierte Fassung siehe \cite{ril-mk-vv}} sollte eine vom Verantwortlichen vorformulierte
+    Einwilligungserklärung in verständlicher und leicht zugänglicher Form in einer klaren und einfachen Sprache zur
+    Verfügung gestellt werden, und sie sollte keine missbräuchlichen Klauseln beinhalten. Damit sie in Kenntnis der
+    Sachlage ihre Einwilligung geben kann, sollte die betroffene Person mindestens wissen, wer der Verantwortliche ist
+    und für welche Zwecke ihre personenbezogenen Daten verarbeitet werden sollen. Es sollte nur dann davon ausgegangen
+    werden, dass sie ihre Einwilligung freiwillig gegeben hat, wenn sie eine echte oder freie Wahl hat und somit in der
+    Lage ist, die Einwilligung zu verweigern oder zurückzuziehen, ohne Nachteile zu erleiden.%
    \label{itm:eg-42}
    
    \crossrefReasonToArticle{42}
@@ -766,14 +763,15 @@
     unterliegen. In diesem Zusammenhang sollte der Begriff „öffentliche Gesundheit“ im Sinne der Verordnung (EG) Nr.
     1338/2008 des Europäischen Parlaments und des Rates\comment{Verordnung (EG) Nr. 1338/2008 des Europäischen
     Parlaments und des Rates vom 16. Dezember 2008 zu Gemeinschaftsstatistiken über öffentliche Gesundheit und über
-    Gesundheitsschutz und Sicherheit am Arbeitsplatz (ABl. L 354 vom 31.12.2008, S. 70).} ausgelegt werden und alle
-    Elemente im Zusammenhang mit der Gesundheit wie den Gesundheitszustand einschließlich Morbidität und Behinderung,
-    die sich auf diesen Gesundheitszustand auswirkenden Determinanten, den Bedarf an Gesundheitsversorgung, die der
-    Gesundheitsversorgung zugewiesenen Mittel, die Bereitstellung von Gesundheitsversorgungsleistungen und den
-    allgemeinen Zugang zu diesen Leistungen sowie die entsprechenden Ausgaben und die Finanzierung und schließlich die
-    Ursachen der Mortalität einschließen. Eine solche Verarbeitung von Gesundheitsdaten aus Gründen des öffentlichen
-    Interesses darf nicht dazu führen, dass Dritte, unter anderem Arbeitgeber oder Versicherungs- und
-    Finanzunternehmen, solche personenbezogene Daten zu anderen Zwecken verarbeiten.%
+    Gesundheitsschutz und Sicherheit am Arbeitsplatz, konsolidierte Fassung siehe \cite{vo-stat-ges}} ausgelegt werden
+    und alle Elemente im Zusammenhang mit der Gesundheit wie den Gesundheitszustand einschließlich Morbidität und
+    Behinderung, die sich auf diesen Gesundheitszustand auswirkenden Determinanten, den Bedarf an
+    Gesundheitsversorgung, die der Gesundheitsversorgung zugewiesenen Mittel, die Bereitstellung von
+    Gesundheitsversorgungsleistungen und den allgemeinen Zugang zu diesen Leistungen sowie die entsprechenden Ausgaben
+    und die Finanzierung und schließlich die Ursachen der Mortalität einschließen. Eine solche Verarbeitung von
+    Gesundheitsdaten aus Gründen des öffentlichen Interesses darf nicht dazu führen, dass Dritte, unter anderem
+    Arbeitgeber oder Versicherungs- und Finanzunternehmen, solche personenbezogene Daten zu anderen Zwecken
+    verarbeiten.%
    \label{itm:eg-54}
    
    \crossrefReasonToArticle{54}
@@ -1507,9 +1505,9 @@
     letztgenannten Beschlüsse bewerten und dem durch diese Verordnung eingesetzten Ausschuss im Sinne der Verordnung
     (EU) Nr. 182/2011 des Europäischen Parlaments und des Rates\comment{Verordnung (EU) Nr. 182/2011 des Europäischen
     Parlaments und des Rates vom 16. Februar 2011 zur Festlegung der allgemeinen Regeln und Grundsätze, nach denen die
-    Mitgliedstaaten die Wahrnehmung der Durchführungsbefugnisse durch die Kommission kontrollieren (ABl. L 55 vom
-    28.2.2011, S. 13).} sowie dem Europäischen Parlament und dem Rat über alle maßgeblichen Feststellungen Bericht
-    erstatten.%
+    Mitgliedstaaten die Wahrnehmung der Durchführungsbefugnisse durch die Kommission kontrollieren siehe 
+    \cite{vo-kontr-komm}} sowie dem Europäischen Parlament und dem Rat über alle maßgeblichen Feststellungen Bericht
+     erstatten.%
    \label{itm:eg-106}
    
    \crossrefReasonToArticle{106}
@@ -2083,8 +2081,8 @@
     Gerichtsbarkeit, wie sie etwa in der Verordnung (EU) Nr. 1215/2012 des Europäischen Parlaments und des
     Rates\comment{Verordnung (EU) Nr. 1215/2012 des Europäischen Parlaments und des Rates vom 12. Dezember 2012 über
     die gerichtliche Zuständigkeit und die Anerkennung und Vollstreckung von Entscheidungen in Zivil- und
-    Handelssachen (ABl. L 351 vom 20.12.2012, S. 1).} enthalten sind, der Anwendung dieser spezifischen Vorschriften
-    nicht entgegenstehen.%
+    Handelssachen, konsolidierte Fassung siehe \cite{vo-gz}} enthalten sind, der Anwendung dieser spezifischen
+    Vorschriften nicht entgegenstehen.%
    \label{itm:eg-147}
    
    \crossrefReasonToArticle{147}
@@ -2188,15 +2186,15 @@
     oder sonstigen Stellen beinhalten, die vom Recht des jeweiligen Mitgliedstaats über den Zugang der Öffentlichkeit
     zu Dokumenten erfasst werden. Die Richtlinie 2003/98/EG des Europäischen Parlaments und des Rates\comment
     {Richtlinie 2003/98/EG des Europäischen Parlaments und des Rates vom 17. November 2003 über die Weiterverwendung
-    von Informationen des öffentlichen Sektors (ABl. L 345 vom 31.12.2003, S. 90).} lässt das Schutzniveau für
-    natürliche Personen in Bezug auf die Verarbeitung personenbezogener Daten gemäß den Bestimmungen des Unionsrechts
-    und des Rechts der Mitgliedstaaten unberührt und beeinträchtigt diesen in keiner Weise, und sie bewirkt
-    insbesondere keine Änderung der in dieser Verordnung dargelegten Rechte und Pflichten. Insbesondere sollte die
-    genannte Richtlinie nicht für Dokumente gelten, die nach den Zugangsregelungen der Mitgliedstaaten aus Gründen des
-    Schutzes personenbezogener Daten nicht oder nur eingeschränkt zugänglich sind, oder für Teile von Dokumenten, die
-    nach diesen Regelungen zugänglich sind, wenn sie personenbezogene Daten enthalten, bei denen Rechtsvorschriften
-    vorsehen, dass ihre Weiterverwendung nicht mit dem Recht über den Schutz natürlicher Personen in Bezug auf die
-    Verarbeitung personenbezogener Daten vereinbar ist.%
+    von Informationen des öffentlichen Sektors, außer Kraft, letzte konsolidierte Fassung unter \cite
+    {ril-wvi-os}} lässt das Schutzniveau für natürliche Personen in Bezug auf die Verarbeitung personenbezogener Daten
+    gemäß den Bestimmungen des Unionsrechts und des Rechts der Mitgliedstaaten unberührt und beeinträchtigt diesen in
+    keiner Weise, und sie bewirkt insbesondere keine Änderung der in dieser Verordnung dargelegten Rechte und
+    Pflichten. Insbesondere sollte die genannte Richtlinie nicht für Dokumente gelten, die nach den Zugangsregelungen
+    der Mitgliedstaaten aus Gründen des Schutzes personenbezogener Daten nicht oder nur eingeschränkt zugänglich sind,
+    oder für Teile von Dokumenten, die nach diesen Regelungen zugänglich sind, wenn sie personenbezogene Daten
+    enthalten, bei denen Rechtsvorschriften vorsehen, dass ihre Weiterverwendung nicht mit dem Recht über den Schutz
+    natürlicher Personen in Bezug auf die Verarbeitung personenbezogener Daten vereinbar ist.%
    \label{itm:eg-154}
    
    \crossrefReasonToArticle{154}
@@ -2297,7 +2295,7 @@
     klinischer Prüfungen sollten die einschlägigen Bestimmungen der Verordnung (EU) Nr. 536/2014 des Europäischen
     Parlaments und des Rates\comment{Verordnung (EU) Nr. 536/2014 des Europäischen Parlaments und des Rates vom 16.
     April 2014 über klinische Prüfungen mit Humanarzneimitteln und zur Aufhebung der Richtlinie 2001/20/EG Text von
-    Bedeutung für den EWR (ABl. L 158 vom 27.5.2014, S. 1).} gelten.%
+    Bedeutung für den EWR, konsolidierte Fassung siehe \cite{vo-klin-pr-ham}} gelten.%
    \label{itm:eg-161}
    
    \crossrefReasonToArticle{161}
@@ -2322,13 +2320,13 @@
     Die europäischen Statistiken sollten im Einklang mit den in Artikel 338 Absatz 2 AEUV dargelegten statistischen
     Grundsätzen entwickelt, erstellt und verbreitet werden, wobei die nationalen Statistiken auch mit dem Recht der
     Mitgliedstaaten übereinstimmen müssen. Die Verordnung (EG) Nr. 223/2009 des Europäischen Parlaments und des
-    Rates\comment{ Verordnung (EG) Nr. 223/2009 des Europäischen Parlaments und des Rates vom 11. März 2009 über
+    Rates\comment{Verordnung (EG) Nr. 223/2009 des Europäischen Parlaments und des Rates vom 11. März 2009 über
     europäische Statistiken und zur Aufhebung der Verordnung (EG, Euratom) Nr. 1101/2008 des Europäischen Parlaments
     und des Rates über die Übermittlung von unter die Geheimhaltungspflicht fallenden Informationen an das Statistische
     Amt der Europäischen Gemeinschaften, der Verordnung (EG) Nr. 322/97 des Rates über die Gemeinschaftsstatistiken und
     des Beschlusses 89/382/EWG, Euratom des Rates zur Einsetzung eines Ausschusses für das Statistische Programm der
-    Europäischen Gemeinschaften (ABl. L 87 vom 31.3.2009, S. 164).} enthält genauere Bestimmungen zur Vertraulichkeit
-    europäischer Statistiken.%
+    Europäischen Gemeinschaften, konsolidierte Fassung siehe \cite{vo-eustat-euratom}} enthält genauere Bestimmungen
+    zur Vertraulichkeit europäischer Statistiken.%
    \label{itm:eg-163}
    
    \crossrefReasonToArticle{163}
@@ -2418,7 +2416,7 @@
    \crossrefReasonToArticle{171}
 
    \item Der Europäische Datenschutzbeauftragte wurde gemäß Artikel 28 Absatz 2 der Verordnung (EG) Nr. 45/2001
-    konsultiert und hat am 7. März 2012\comment{ABl. C 192 vom 30.6.2012, S. 7.} eine Stellungnahme abgegeben.%
+    konsultiert und hat am 7. März 2012\comment{siehe \cite{sn-dsref}} eine Stellungnahme abgegeben.%
    \label{itm:eg-172}
    
    \crossrefReasonToArticle{172}
@@ -2427,12 +2425,11 @@
     personenbezogener Daten Anwendung finden, die nicht den in der Richtlinie 2002/58/EG des Europäischen Parlaments
     und des Rates\comment{Richtlinie 2002/58/EG des Europäischen Parlaments und des Rates vom 12. Juli 2002 über die
     Verarbeitung personenbezogener Daten und den Schutz der Privatsphäre in der elektronischen Kommunikation
-    (Datenschutzrichtlinie für elektronische Kommunikation) (ABl. L 201 vom 31.7.2002, S. 37).} bestimmte Pflichten,
-    die dasselbe Ziel verfolgen, unterliegen, einschließlich der Pflichten des Verantwortlichen und der Rechte
-    natürlicher Personen. Um das Verhältnis zwischen der vorliegenden Verordnung und der Richtlinie 2002/58/EG
-    klarzustellen, sollte die Richtlinie entsprechend geändert werden. Sobald diese Verordnung angenommen ist, sollte
-    die Richtlinie 2002/58/EG einer Überprüfung unterzogen werden, um insbesondere die Kohärenz mit dieser Verordnung
-    zu gewährleisten —%
+    (Datenschutzrichtlinie für elektronische Kommunikation) siehe \cite{ril-ds-ek}} bestimmte Pflichten, die dasselbe
+    Ziel verfolgen, unterliegen, einschließlich der Pflichten des Verantwortlichen und der Rechte natürlicher Personen.
+    Um das Verhältnis zwischen der vorliegenden Verordnung und der Richtlinie 2002/58/EG klarzustellen, sollte die
+    Richtlinie entsprechend geändert werden. Sobald diese Verordnung angenommen ist, sollte die Richtlinie 2002/58/EG
+    einer Überprüfung unterzogen werden, um insbesondere die Kohärenz mit dieser Verordnung zu gewährleisten —%
    \label{itm:eg-173}
    
    \crossrefReasonToArticle{173}
