Standard-Datenschutzklauseln verlinkt

--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -27,8 +27,8 @@
     \item \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} gemäß \hyperref[ch:47]{Artikel 47},%
     \label{itm:46-2b}
 
-    \item Standarddatenschutzklauseln, die von der Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
-     {Artikel 93 Absatz 2} erlassen werden,%
+    \item Standarddatenschutzklauseln,\comment{aktuelle Fassung veröffentlicht unter \cite{std-dsk}} die von der
+     Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} erlassen werden,%
     \label{itm:46-2c}
 
     \item von einer \hyperref[itm:04-21]{Aufsichtsbehörde} angenommenen Standarddatenschutzklauseln, die von der
