--- a/DSGVO-ExtendedVersion.bib
+++ b/DSGVO-ExtendedVersion.bib
@@ -254,3 +254,11 @@
   howpublished = {ABl. C 192 vom 30.6.2012, S. 7–15},
   url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=uriserv%3AOJ.C_.2012.192.01.0007.01.DEU&toc=OJ%3AC%3A2012%3A192%3ATOC}
 }
+
+@misc { std-dsk,
+  shorthand    = {Std-DSK},
+  title        = {Durchführungsbeschluss (EU) 2021/914 der Kommission vom 4. Juni 2021 über Standardvertragsklauseln für die Übermittlung personenbezogener Daten an Drittländer gemäß der Verordnung (EU) 2016/679 des Europäischen Parlaments und des Rates},
+  date         = {2021-06-04},
+  howpublished = {ABl. L 199 vom 7.6.2021, S. 31–61},
+  url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32021D0914}
+}
